# Messaging

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflow/: build.yml
.github/workflows/: Intel-MPI.yml  MPICH.yml  Open-MPI.yml  build.yml
include/: messaging.hpp
include/messaging/: comm_world.hpp  config.hpp  environment.hpp  serialization.hpp
src/: comm_world.cpp  environment.cpp  point-to-point.cpp
test/: CMakeLists.txt  test.cpp  test_collective.cpp
